syntax = "proto3";

package centrifugal.centrifugo.api;

option go_package = "./;apiproto";

// CentrifugoApi service definition for server-side API
service CentrifugoApi {
    // Publish a message to a single channel
    rpc Publish(PublishRequest) returns (PublishResponse) {}
    
    // Broadcast a message to multiple channels
    rpc Broadcast(BroadcastRequest) returns (BroadcastResponse) {}
    
    // Subscribe a user to a channel
    rpc Subscribe(SubscribeRequest) returns (SubscribeResponse) {}
    
    // Unsubscribe a user from a channel
    rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse) {}
    
    // Disconnect a user
    rpc Disconnect(DisconnectRequest) returns (DisconnectResponse) {}
    
    // Get presence information for a channel
    rpc Presence(PresenceRequest) returns (PresenceResponse) {}
    
    // Get presence stats for a channel
    rpc PresenceStats(PresenceStatsRequest) returns (PresenceStatsResponse) {}
    
    // Get history from a channel
    rpc History(HistoryRequest) returns (HistoryResponse) {}
    
    // Remove history from a channel
    rpc HistoryRemove(HistoryRemoveRequest) returns (HistoryRemoveResponse) {}
    
    // Get info about Centrifugo nodes
    rpc Info(InfoRequest) returns (InfoResponse) {}
    
    // Refresh user connection
    rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
    
    // Get list of active channels
    rpc Channels(ChannelsRequest) returns (ChannelsResponse) {}
    
    // Batch multiple commands
    rpc Batch(BatchRequest) returns (BatchResponse) {}
}

// Error represents an API error
message Error {
    uint32 code = 1;
    string message = 2;
}

// PublishRequest to publish data to a channel
message PublishRequest {
    string channel = 1;
    bytes data = 2;
    string b64data = 3;
    bool skip_history = 4;
    map<string, string> tags = 5;
    string idempotency_key = 6;
    bool delta = 7;
    uint64 version = 8;
    string version_epoch = 9;
}

// PublishResponse contains result of publish operation
message PublishResponse {
    Error error = 1;
    PublishResult result = 2;
}

// PublishResult contains information about published message
message PublishResult {
    uint64 offset = 1;
    string epoch = 2;
}

// BroadcastRequest to publish data to multiple channels
message BroadcastRequest {
    repeated string channels = 1;
    bytes data = 2;
    string b64data = 3;
    bool skip_history = 4;
    map<string, string> tags = 5;
    string idempotency_key = 6;
    bool delta = 7;
    uint64 version = 8;
    string version_epoch = 9;
}

// BroadcastResponse contains result of broadcast operation
message BroadcastResponse {
    Error error = 1;
    BroadcastResult result = 2;
}

// BroadcastResult contains responses for each channel
message BroadcastResult {
    repeated PublishResponse responses = 1;
}

// SubscribeRequest to subscribe user to channel
message SubscribeRequest {
    string channel = 1;
    string user = 2;
    int64 expire_at = 3;
    bytes info = 4;
    string b64info = 5;
    string client = 6;
    bytes data = 7;
    string b64data = 8;
    StreamPosition recover_since = 9;
    SubscribeOptionOverride override = 10;
    string session = 11;
}

// SubscribeResponse contains result of subscribe operation
message SubscribeResponse {
    Error error = 1;
    SubscribeResult result = 2;
}

// SubscribeResult is empty at the moment
message SubscribeResult {}

// BoolValue wrapper for optional boolean
message BoolValue {
    bool value = 1;
}

// SubscribeOptionOverride allows overriding channel options
message SubscribeOptionOverride {
    BoolValue presence = 1;
    BoolValue join_leave = 2;
    BoolValue force_recovery = 3;
    BoolValue force_positioning = 4;
    BoolValue force_push_join_leave = 5;
}

// UnsubscribeRequest to unsubscribe user from channel
message UnsubscribeRequest {
    string channel = 1;
    string user = 2;
    string client = 3;
    string session = 4;
}

// UnsubscribeResponse contains result of unsubscribe operation
message UnsubscribeResponse {
    Error error = 1;
    UnsubscribeResult result = 2;
}

// UnsubscribeResult is empty at the moment
message UnsubscribeResult {}

// Disconnect object with code and reason
message Disconnect {
    uint32 code = 1;
    string reason = 2;
}

// DisconnectRequest to disconnect user
message DisconnectRequest {
    string user = 1;
    Disconnect disconnect = 2;
    string client = 3;
    repeated string whitelist = 4;
    string session = 5;
}

// DisconnectResponse contains result of disconnect operation
message DisconnectResponse {
    Error error = 1;
    DisconnectResult result = 2;
}

// DisconnectResult is empty at the moment
message DisconnectResult {}

// PresenceRequest to get presence in channel
message PresenceRequest {
    string channel = 1;
}

// PresenceResponse contains presence information
message PresenceResponse {
    Error error = 1;
    PresenceResult result = 2;
}

// ClientInfo contains client connection information
message ClientInfo {
    string user = 1;
    string client = 2;
    bytes conn_info = 3;
    bytes chan_info = 4;
}

// PresenceResult contains presence map
message PresenceResult {
    map<string, ClientInfo> presence = 1;
}

// PresenceStatsRequest to get presence stats
message PresenceStatsRequest {
    string channel = 1;
}

// PresenceStatsResponse contains presence stats
message PresenceStatsResponse {
    Error error = 1;
    PresenceStatsResult result = 2;
}

// PresenceStatsResult contains presence statistics
message PresenceStatsResult {
    uint32 num_clients = 1;
    uint32 num_users = 2;
}

// StreamPosition for recovery and history iteration
message StreamPosition {
    uint64 offset = 1;
    string epoch = 2;
}

// HistoryRequest to get channel history
message HistoryRequest {
    string channel = 1;
    int32 limit = 2;
    StreamPosition since = 3;
    bool reverse = 4;
}

// HistoryResponse contains history information
message HistoryResponse {
    Error error = 1;
    HistoryResult result = 2;
}

// Publication represents a message in history
message Publication {
    bytes data = 2;
    ClientInfo info = 3;
    uint64 offset = 4;
    map<string, string> tags = 5;
}

// HistoryResult contains publications
message HistoryResult {
    repeated Publication publications = 1;
    string epoch = 2;
    uint64 offset = 3;
}

// HistoryRemoveRequest to remove history
message HistoryRemoveRequest {
    string channel = 1;
}

// HistoryRemoveResponse contains result of history remove operation
message HistoryRemoveResponse {
    Error error = 1;
    HistoryRemoveResult result = 2;
}

// HistoryRemoveResult is empty at the moment
message HistoryRemoveResult {}

// InfoRequest to get Centrifugo info
message InfoRequest {}

// InfoResponse contains info about Centrifugo nodes
message InfoResponse {
    Error error = 1;
    InfoResult result = 2;
}

// InfoResult contains information about nodes
message InfoResult {
    repeated NodeResult nodes = 1;
}

// NodeResult contains information about a single node
message NodeResult {
    string uid = 1;
    string name = 2;
    string version = 3;
    uint32 num_clients = 4;
    uint32 num_users = 5;
    uint32 num_channels = 6;
    uint32 uptime = 7;
    Metrics metrics = 8;
    Process process = 9;
    uint32 num_subs = 10;
}

// Metrics contains metric information
message Metrics {
    double interval = 1;
    map<string, double> items = 2;
}

// Process contains process information
message Process {
    double cpu = 1;
    int64 rss = 2;
}

// RefreshRequest to refresh user connection
message RefreshRequest {
    string user = 1;
    string client = 2;
    bool expired = 3;
    int64 expire_at = 4;
    bytes info = 5;
    string session = 6;
}

// RefreshResponse contains result of refresh operation
message RefreshResponse {
    Error error = 1;
    RefreshResult result = 2;
}

// RefreshResult is empty at the moment
message RefreshResult {}

// ChannelsRequest to get active channels
message ChannelsRequest {
    string pattern = 1;
}

// ChannelsResponse contains channels information
message ChannelsResponse {
    Error error = 1;
    ChannelsResult result = 2;
}

// ChannelsResult contains active channels
message ChannelsResult {
    map<string, ChannelInfo> channels = 1;
}

// ChannelInfo contains information about a channel
message ChannelInfo {
    uint32 num_clients = 1;
}

// Command wraps different request types for batch operations
message Command {
    oneof cmd {
        PublishRequest publish = 4;
        BroadcastRequest broadcast = 5;
        SubscribeRequest subscribe = 6;
        UnsubscribeRequest unsubscribe = 7;
        DisconnectRequest disconnect = 8;
        PresenceRequest presence = 9;
        PresenceStatsRequest presence_stats = 10;
        HistoryRequest history = 11;
        HistoryRemoveRequest history_remove = 12;
        InfoRequest info = 13;
        RefreshRequest refresh = 15;
        ChannelsRequest channels = 16;
    }
}

// Reply wraps different response types for batch operations
message Reply {
    Error error = 1;
    oneof result {
        PublishResult publish = 4;
        BroadcastResult broadcast = 5;
        SubscribeResult subscribe = 6;
        UnsubscribeResult unsubscribe = 7;
        DisconnectResult disconnect = 8;
        PresenceResult presence = 9;
        PresenceStatsResult presence_stats = 10;
        HistoryResult history = 11;
        HistoryRemoveResult history_remove = 12;
        InfoResult info = 13;
        RefreshResult refresh = 15;
        ChannelsResult channels = 16;
    }
}

// BatchRequest to send multiple commands
message BatchRequest {
    repeated Command commands = 1;
    bool parallel = 2;
}

// BatchResponse contains results of batch operations
message BatchResponse {
    repeated Reply replies = 1;
}
